codegen/ui_tests/rhai_fn_rename_collision.stderr
error: duplicate Rhai signature for 'foo'
  --> ui_tests/rhai_fn_rename_collision.rs:17:15
   |
17 |     #[rhai_fn(name = "foo")]
   |               ^^^^

error: duplicated function renamed 'foo'
  --> ui_tests/rhai_fn_rename_collision.rs:12:15
   |
12 |     #[rhai_fn(name = "foo")]
   |               ^^^^
